[package]
name = "minstant"
version = "0.1.7"
authors = ["The TiKV Authors"]
documentation = "https://docs.rs/minstant"
edition = "2021"
homepage = "https://github.com/tikv/minstant"
keywords = ["TSC", "clock", "rdtsc", "timing", "nanosecond"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tikv/minstant"
description = "A drop-in replacement for `std::time::Instant` that measures time with high performance and high accuracy powered by TSC"

[dependencies]
ctor = "0.2.8"

[dev-dependencies]
criterion = "0.5"
getrandom = { version = "0.2", features = ["js"] }
quanta = "0.12"
rand = "0.8"

[[bench]]
name = "criterion"
harness = false
